# tea-llvm-codemanager

./: .gitignore  CMakeLists.txt  LLVM_IR_Relations.md  demo.md  devenv.Dockerfile  llvm.Dockerfile  output.txt
examples/: test.c  test.ll
examples/gzip-test/: Makefile  gzip-1.2.4a.bc  gzip-1.2.4a.ll  tea.Makefile
examples/test1-test/: Makefile  tea.Makefile  test1.c  test1.ll
include/: instr_factory.h  instrumentmng.h  irmanager.h  irmanager_base.h  irmanager_instr.h  irmanager_trgts.def  simplify_llvm.dl.macro  testManager.h  trgt.h  utils.h
lib/: instrumentmng.cpp  irmanager_base.cpp  irmanager_instr.cpp  irmanger.cpp  testManager.cpp
parser/: main.cpp  test_cudd.cpp
pbhs/: trgt.pb.cc  trgt.pb.h  trgt.proto
src/: infs.bc  infs.cpp  instr_examples.h  rpc_server.cpp  standalone.cpp
src/instr_examples/: ci_IM.h  ci_IM.inc  ci_Vval.h  ci_Vval.inc  instr_ci_IM.c  instr_ci_IM.ll  instr_ci_Vval.c  instr_ci_Vval.ll  instr_reachableM.c  instr_reachableM.ll  reachableM.h  reachableM.inc
test/: 11.ll  gzip-1.2.4a.ll  test  test-parser.cpp  test.c  test.ll  test_func.ll  test_out.bc  test_out.ll  testllvm.cpp
